--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
 body {
     background: url(image/background.jpg) ;
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
 }
+
