--- a/main.css
+++ b/main.css
@@ -5,20 +5,6 @@ body {
     background-attachment: fixed;
 }
 
-
-#navbar {
-    margin: 0;
-    list-style-type: none;
-    width: 50%;
-    height: 5%;
-    text-align: center;
-    background-color: #33ADFF;
-    position: absolute;
-    left: 47.9%;
-    top: 0%;
-
-}
-
 .square {
     margin: 0;
     left: 0%;
@@ -32,6 +18,18 @@ body {
     font-size: 4vh;
 }
 
+#navbar {
+    margin: 0;
+    list-style-type: none;
+    width: 50%;
+    height: 5%;
+    text-align: center;
+    background-color: #33ADFF;
+    position: absolute;
+    left: 50%;
+    top: 0%;
+
+}
 
 #navbar li {
     display: inline
@@ -40,9 +38,10 @@ body {
 #navbar a {
     text-decoration: none;
     font-weight: bold;
-    display: inline-block;
+    display: inline;
     width: 200px;
-    color: red;
+    color: black;
+    font-size: 4vh;
 }
 
 #navbar a:hover {
@@ -54,4 +53,48 @@ body {
 #clsfot {
     margin-top: 20px;
     visibility: hidden;
+}
+
+#avt{
+    margin: 0;
+    list-style-type: none;
+    width: 50%;
+    height: 5%;
+    text-align: center;
+    background-color: #33ADFF;
+    position: absolute;
+    left: 50%;
+    top: 95%;
+ 
+}
+#avt li {
+    display: inline
+}
+
+#avt a {
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    width: 200px;
+    color: white;
+    font-size: 4vh;
+}
+
+#avt a:hover {
+    border-radius: 10px 5px;
+    background-color: #0066FF;
+}
+
+
+.zh {
+    margin: 0;
+    left: 0%;
+    top: 95%;
+    list-style-type: none;
+    width: 50%;
+    height: 5%;
+    background-color: #33ADFF;
+    position: absolute;
+    text-align: center;
+    font-size: 4vh;
 }
