--- a/test_result.css
+++ b/test_result.css
@@ -1,12 +1,39 @@
-.result{
-    font-size: 18px;
-    background-color: #626694;
-    color: #fff;
-    border-collapse: collapse;
-
-}
-.result td{
-    padding: 10px;
-    border: 1px solid #fff;
-
-}
+body{
+    background-color: #f9e505;
+  }
+  
+  .icon-block {
+    padding: 0 15px;
+  }
+  .icon-block .material-icons {
+      font-size: inherit;
+  }
+  
+  .projects {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+  }
+  @media only screen and (min-width: 601px) {
+    .projects {
+      width: 98%;
+    }
+  }
+  @media only screen and (min-width: 993px) {
+    .projects {
+      width: 98%;
+    }
+  }
+  
+  table {
+    display: block;
+    overflow-x: auto;
+  }
+  
+  .select-dropdown{
+    color: #000;
+  }
+  
+  ul.dropdown-content.select-dropdown li span {
+    color: #000; 
+  }
