--- a/main.css
+++ b/main.css
@@ -18,38 +18,6 @@ body {
     font-size: 4vh;
 }
 
-#navbar {
-    margin: 0;
-    list-style-type: none;
-    width: 50%;
-    height: 5%;
-    text-align: center;
-    background-color: #33ADFF;
-    position: absolute;
-    left: 50%;
-    top: 0%;
-
-}
-
-#navbar li {
-    display: inline
-}
-
-#navbar a {
-    text-decoration: none;
-    font-weight: bold;
-    display: inline;
-    width: 200px;
-    color: black;
-    font-size: 4vh;
-}
-
-#navbar a:hover {
-    border-radius: 10px 5px;
-    background-color: #0066FF;
-}
-
-
 #clsfot {
     margin-top: 20px;
     visibility: hidden;
@@ -98,3 +66,30 @@ body {
     text-align: center;
     font-size: 4vh;
 }
+
+
+
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
