--- a/main.css
+++ b/main.css
@@ -19,52 +19,18 @@ body {
 }
 
 #clsfot {
-    margin-top: 20px;
+    margin-top: 1000px;
     visibility: hidden;
 }
 
-#avt{
-    margin: 0;
-    list-style-type: none;
-    width: 50%;
-    height: 5%;
-    text-align: center;
-    background-color: #33ADFF;
-    position: absolute;
-    left: 50%;
-    top: 95%;
- 
-}
-#avt li {
-    display: inline
-}
-
-#avt a {
-    text-decoration: none;
-    font-weight: bold;
-    display: inline-block;
-    width: 200px;
-    color: white;
-    font-size: 4vh;
-}
-
-#avt a:hover {
-    border-radius: 10px 5px;
-    background-color: #0066FF;
-}
 
 
 .zh {
-    margin: 0;
-    left: 0%;
-    top: 95%;
-    list-style-type: none;
-    width: 50%;
-    height: 5%;
-    background-color: #33ADFF;
-    position: absolute;
+    margin-top: 100px;
+    color:black;
+    padding: 14px 16px;
+    font-size: 17px;
     text-align: center;
-    font-size: 4vh;
 }
 
 
